--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ h1 {
   font-family: Georgia, serif; /* Georgia font */
   font-size: 18pt;             /* Size 18 */
   text-align: center;          /* Centered */
-  margin-bottom: 30px;         /* Extra space after title */
+  margin-bottom: 30px; 
+  color: darkblue        /* Extra space after title */
 }
 
 h2 {
@@ -20,4 +21,11 @@ p {
   line-height: 1.0;                /* Single-spaced */
   text-indent: 2em;                /* Indentation at start of paragraph */
   margin-bottom: 20px;             /* Double spacing between paragraphs */
+}
+
+h1 {
+  color: darkblue;
+  text-align: center;
+  font-family: Georgia, serif;
+  font-size: 18pt;
 }
