--- a/style.css
+++ b/style.css
@@ -25,3 +25,12 @@ p {
   text-indent: 2em;                /* Indentation at start of paragraph */
   margin-bottom: 20px;             /* Double spacing between paragraphs */
 }
+
+header {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  height: 100px;
+  background-color: #002147; /* deep navy blue */
+  text-align: center;        /* center the text inside */
+  color: white;              /* make text stand out against dark background */
+}
