--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ h1 {
     text-align: center;
 }
 
-/* Subheadings */
 h2 {
     font-family: Georgia, serif;
     font-size: 22px;
-    color: #2E8B57;                /* sea green for freshness */
-    margin-top: 40px;              /* extra space above h2 */
-    margin-bottom: 15px;           /* space below h2 */
+    color: #2E8B57;       /* sea green or any color you like */
+    margin-top: 40px;     /* space above h2 */
+    margin-bottom: 15px;  /* space below h2 */
+    margin-left: 30px;    /* indent from the left */
     text-align: left;
 }
 
