--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ h2 {
     margin-top: 40px;            /* extra space so it doesn’t crowd header */
     margin-left: 30px;           /* slight indent */
     margin-bottom: 15px;
-    text-align: left;
+    text-align: center;
 }
 
 h3{
     font-family: Georgia, serif;
     font-size: 22px;
-    color: #2E8B57;       
+    color: black;       
     margin-top: 40px;     
     margin-bottom: 15px;  
     margin-left: 30px;    
