--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #002147; 
+    background-color: #002147;   /* deep navy */
     padding: 30px 0;
     height: 120px;
     text-align: center;
@@ -21,31 +21,21 @@ h2 {
     margin-top: 40px;            /* extra space so it doesn’t crowd header */
     margin-left: 30px;           /* slight indent */
     margin-bottom: 15px;
-    text-align: center;
-}
-
-h3{
-    font-family: Georgia, serif;
-    font-size: 22px;
-    color: black;       
-    margin-top: 40px;     
-    margin-bottom: 15px;  
-    margin-left: 30px;    
     text-align: left;
 }
 
 p {
-    color: #333;                  
+    color: #333333;              /* softer black */
     font-family: Tahoma, sans-serif;
     font-size: 15px;
     text-align: justify;
-    line-height: 1.6;              
-    text-indent: 2em;              
-    margin-bottom: 25px;           
+    line-height: 1.6;
+    text-indent: 2em;
+    margin-bottom: 25px;
 }
 
 body {
-    background-color: #f4f9f9; 
+    background-color: #f4f9f9;   /* light gray-blue */
     margin: 0;
     padding: 0;
 }
