--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h3 {
     margin-top: 25px;
     margin-left: 50px;     
     margin-bottom: 10px;
-    text-align: left;
+    text-align: center;
 }
 
 
