--- a/style.css
+++ b/style.css
@@ -1,43 +1,39 @@
 header {
-    background-color: #002147;
+    background-color: #002147; 
     padding: 30px 0;
-    height: 120px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0,0,0,0.25);
 }
 
 h1 {
-    color: #FFD700;
+    color: #FFD700;        
     font-family: Georgia, serif;
     font-size: 28px;
     margin: 0;
     letter-spacing: 2px;
-    text-align: center;
-}
-
-h2 {
-    color: black;        
-    font-family: Georgia, serif;
-    font-size: 18px;
-    margin-top: 25px;
-    margin-left: 50px;      
-    margin-bottom: 10px;
-    text-align: left;
 }
 
 h3 {
-    color: lightblue;             
-    font-family: Georgia, serif;
-    font-size: 18px;
-    margin-top: 25px;
-    margin-left: 50px;     
-    margin-bottom: 10px;
+    color: #f0f0f0;          
+    font-family: Tahoma, sans-serif;
+    font-size: 16px;
+    margin-top: 8px;
     text-align: center;
+    font-style: italic;    
 }
 
+h2 {
+    color: black;          
+    font-family: Georgia, serif;
+    font-size: 22px;       
+    margin-top: 40px;       
+    margin-left: 50px;        
+    margin-bottom: 15px;
+    text-align: left;
+}
 
 p {
-    color: black;    
+    color: black;
     font-family: Tahoma, sans-serif;
     font-size: 15px;
     text-align: justify;
@@ -47,7 +43,7 @@ p {
 }
 
 body {
-    background-color: #f4f9f9; 
+    background-color: #f4f9f9;
     margin: 0;
     padding: 0;
 }
